fixed horizontal alignment for payment method, gateway indicator, menu, and adjust responsiveness

--- a/package/src/common/TabGroup/TabGroup.module.css
+++ b/package/src/common/TabGroup/TabGroup.module.css
@@ -1,6 +1,5 @@
 .wrapper {
     height: 63px;
-    padding-left: 15px;
     display: flex;
     align-items: flex-end;
     flex: 1;
